--- a/disk/index.html
+++ b/disk/index.html
@@ -37,7 +37,7 @@
                     <label> Remember me</label>
                 </div>
                 <div>
-                    <a href="#" class="text-pink-500 font-semibold">forgot password user</a>
+                    <a href="#" class="text-pink-500 font-semibold">forgot password user dan client</a>
                 </div>
             </div>
             <div class="mt-5">
